--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             Happy Birthday
         </div>
         <div class="name">
-            SHARDDHA
+            SHRADDHA
         </div>
         
         <div class="wrapper">
